# Scaffold-python-2026

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruffignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  seed_db.py  sonar-project.properties  sonar.properties
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-install.sh
.github/workflows/: branch-protection-check.yml  cd.yml  ci.yml  security.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/credit_engine/: __init__.py  main.py
src/credit_engine/application/: __init__.py
src/credit_engine/application/dto/: __init__.py  proposal_dto.py  user_dto.py
src/credit_engine/application/services/: __init__.py  credit_decision_service.py  user_service.py
src/credit_engine/domain/: __init__.py
src/credit_engine/domain/entities/: __init__.py  applicant.py  decision.py  policy.py  proposal.py  rule_result.py  user.py
src/credit_engine/domain/repositories/: __init__.py  decision_repository.py  policy_repository.py  proposal_repository.py  user_repository.py
src/credit_engine/domain/value_objects/: __init__.py  channel.py  decision_status.py  product_type.py  user_rules.py
src/credit_engine/infrastructure/: __init__.py
src/credit_engine/infrastructure/database/: __init__.py  base.py  config.py  init_db.py  models.py  seed.py
src/credit_engine/infrastructure/repositories/: __init__.py  decision_repository_impl.py  policy_repository_impl.py  proposal_repository_impl.py  user_repository_impl.py
src/credit_engine/interfaces/api/: __init__.py
src/credit_engine/interfaces/api/controllers/: __init__.py
src/credit_engine/interfaces/api/routes/: __init__.py  credit_decisions.py  user.py
src/credit_engine/interfaces/engine/: __init__.py  decision_engine.py  rule.py
src/credit_engine/interfaces/engine/rules/: __init__.py  age_range_rule.py  max_income_commitment_rule.py  max_installments_rule.py  min_income_rule.py
tests/: conftest.py  test_starting.py
tests/integration/: __init__.py  test_credit_decision_service.py
tests/unit/: __init__.py  test_min_income_rule.py
