[tool.poetry]
name = "python-demo"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Wellington Ramos Bezerra <wellington.bezerra@kardbank.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
sqlalchemy = ">=2.0.25"
alembic = "1.12.1"
psycopg2-binary = ">=2.9.11"
pydantic = ">=2.9.0"
pydantic-settings = ">=2.5.0"
python-dotenv = "1.0.0"
httpx = "0.25.2"
pbs-installer = "^2026.1.14"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
httpx = "0.25.2"
ruff = ">=0.1.0"
mypy = "1.7.0"
types-psycopg2 = ">=2.9.21"
pre-commit = ">=3.5.0"

[build-system]
requires = ["poetry-core>=2.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
# Configuração do Ruff - Linter e Formatter rápido
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "alembic/versions",
    "build",
    "dist",
]

[tool.ruff.lint]
# Habilitar regras específicas
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument (pode ser útil em alguns casos)
    "E402",  # module level import not at top of file (necessário em alguns casos como alembic/env.py)
    "UP007", # Use `X | Y` for type annotations (mantém compatibilidade com Python < 3.10)
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` (pode ser muito restritivo)
]

[tool.ruff.lint.per-file-ignores]
# Arquivos do Alembic podem ter imports após configuração de path
"alembic/env.py" = ["E402"]
# Seed scripts podem ter imports após configuração
"seed_db.py" = ["E402"]
# Testes podem ter imports mais flexíveis
"tests/**/*.py" = ["E402"]
# Decision engine usa RuleResult em runtime, não apenas type hints
"src/credit_engine/interfaces/engine/decision_engine.py" = ["TCH001"]

[tool.ruff.lint.isort]
known-first-party = ["credit_engine"]

[tool.ruff.format]
# Configuração do formatter do Ruff
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
# Configuração do MyPy - Type checker
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

# Caminhos a serem verificados
files = [
    "src",
    "tests",
    "main.py",
    "seed_db.py",
]

# Excluir
exclude = [
    "alembic/",
    "__pycache__",
    ".venv",
    "venv",
    ".mypy_cache",
]

# Plugins
plugins = []

# Configurações específicas por módulo
[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "alembic.versions.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "psycopg2.*",
    "sqlalchemy.*",
    "fastapi.*",
    "uvicorn.*",
    "pydantic.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true
